--- a/style.css
+++ b/style.css
@@ -1,24 +1,26 @@
 #verbs-container{
     margin: 0 35%;
-
 }
 .verbs-answer{
     display: block;
 }
+
 .rightAnswer, .rightAnswer:hover{
-    background-color: #6ab04c;
-    border-color: #6ab04c;
-    color: #fff;
+    background-color: green;
+    border-color: green;
+    color: white;
+
 }
+
 .wrongAnswer, .wrongAnswer:hover{
     background-color: #b33030;
     border-color: #b33030;
-    color: #fff;
- }
+    color: white;
 
+}
 
- #next{
-    margin-top: 7rem;
+#next{
+    margin-top: 8rem;
     cursor: pointer;
     color: green;
- }
+}
